Resolve "Bug: Plausibilitätsprüfung bei Sprachen für Halbjahr Auswahl fehlt"